tests/snapshots/run_wpt_conformance__trtx_reduceLogSum_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum.https.any.js",
    "reduceLogSum float32 2D tensor default options",
    "trtx",
    "PASS",
)
